vpc3/private_subnet.tf
resource "aws_subnet" "subnet1" {
  vpc_id            = aws_vpc.sana.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = data.aws_availability_zones.available.names[0]
   tags                 = local.common_tags
}
resource "aws_subnet" "subnet2" {
  vpc_id            = aws_vpc.sana.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = data.aws_availability_zones.available.names[1]
tags                 = local.common_tags
}
resource "aws_subnet" "subnet3" {
  vpc_id            = aws_vpc.sana.id
  cidr_block        = "10.0.3.0/24"
  availability_zone = data.aws_availability_zones.available.names[2]
  tags                 = local.common_tags
}
