vpc3/vpc.tf
resource "aws_vpc" "sana" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
 tags                 = local.common_tags
}
